# GGenie

./: .clang-format  .clang-tidy  .gitignore  .miserc.toml  CMakeLists.txt  README.md  compile_commands.json  conanfile.py  conanprofile  engine.drawio  main.cpp  mise.dev.toml  mise.release.toml  mise.toml
demo/include/: config.h.in
demo/src/: main.cpp  utils.cpp
engine/include/adapter/event/: GLFWEventsAdapter.h
engine/include/component/: Camera.h  CubeMesh.h  Material.h  Mesh.h  Move.h  Shader.h  Transform.h  TransformTween.h
engine/include/config/: Config.h
engine/include/ecs/: Component.h  ComponentRegistry.h  ComponentRegistry.hpp  ComponentStorage.h  DefaultComponentStorage.h  DefaultComponentStorage.hpp  DefaultWorld.h  Entity.h  System.h  World.h
engine/include/graphics/: shader.h
engine/include/logging/: Formatter.h  LogLevel.h  Logg.h  Logger.h
engine/include/math/: Mat4.h  Quat.h  Vec3.h  algebras.h  lerp.hpp
engine/include/resources/: Loader.h  Resources.h
engine/include/shaders/: defaultshaders.h
engine/include/system/control/: FPVEvent.h  FirstPersonViewControlSystem.h
engine/include/system/event/: Event.h  EventSystem.hpp
engine/include/system/input/: GLFWInputEvent.h  GLFWInputSystem.h
engine/include/system/render/: RenderSystem.h  defaultshaders.h
engine/include/system/stats/: Character.h  StatsSystem.h
engine/include/system/tween/: Interpolator.hpp  Tween.hpp  TweenBuilder.hpp  TweenSystem.h  TweenSystem.hpp  easing.hpp
engine/include/utils/: hash_utils.h  narrow.h  random.hpp
engine/include/window/: EngineWindow.h  GlfwEngineWindow.h
engine/resources/shader/: default-fragment.glsl  default-vertex.glsl
engine/src/adapter/event/: GLFWEventsAdapter.cpp
engine/src/component/: CubeMesh.cpp  Material.cpp  Mesh.cpp  Shader.cpp  Transform.cpp
engine/src/config/: Config.cpp
engine/src/ecs/: ComponentRegistry.cpp  DefaultComponentStorage.cpp  DefaultWorld.cpp  System.cpp  World.cpp
engine/src/graphics/opengl/: shader.cpp
engine/src/logging/: Formatter.cpp  Logg.cpp  Logger.cpp
engine/src/math/: Mat4.cpp  Quat.cpp  Vec3.cpp
engine/src/resources/: Loader.cpp  Resources.cpp
engine/src/system/: RenderSystem.cpp
engine/src/system/control/: FirstPersonViewControlSystem.cpp
engine/src/system/input/: GLFWInputSystem.cpp
engine/src/system/render/: RenderSystem.cpp
engine/src/system/stats/: .StatsSystem.cpp.swp  StatsSystem.cpp
engine/src/system/tween/: TweenSystem.cpp
engine/src/utils/: hash_utils.cpp
engine/src/window/: GlfwEngineWindow.cpp
engine/test/math/: Quat.test.cpp  Vec3.test.cpp
glad/: glad.c  glad.h
src/: main.cpp
src/component/: CubeMesh.cpp  CubeMesh.h  Mesh.h  Shader.cpp
src/window/: GlfwEngineWindow.cpp  GlfwEngineWindow.h
